Fixed navbar responsiveness on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,8 +119,8 @@ nav ul li a {
 .python { width: 60%; background: #8c05ae; }  /* Python - Yellow */
 .sql { width: 60%; background: #b40d16; }  /* SQL - Red */
 .asm { width: 40%; background: #b0277b; }  /* Assembly - Purple */
-.html{width: 40%; background: #2c90a6; }
-.css{width: 40%; background: #79b66d; }
+.html {width: 40%; background: #2c90a6; }
+.css {width: 40%; background: #79b66d; }
 
 /* Responsive */
 @media (max-width: 600px) {
@@ -158,7 +158,8 @@ nav ul li a {
     font-size: 1rem;
     color: #ddd;
 }
-.github-link {
+.github-link 
+{
     position: absolute;
     top: 10px;
     right: 15px;
